[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Character/white_bkgnd.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GUI/Character_Info.gd" type="Script" id=3]

[node name="Character_Info" type="PanelContainer"]
margin_right = 150.0
margin_bottom = 34.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 169.0
margin_bottom = 109.0
size_flags_vertical = 0

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 162.0
margin_bottom = 20.0

[node name="Name" type="Label" parent="VBoxContainer/Title"]
margin_top = 3.0
margin_right = 138.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "This is my name"
valign = 1

[node name="Expand_Button" type="Button" parent="VBoxContainer/Title"]
margin_left = 142.0
margin_right = 162.0
margin_bottom = 20.0
text = "+"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 162.0
margin_bottom = 102.0

[node name="Icon" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 78.0
margin_bottom = 78.0

[node name="Team_Bkgnd" type="TextureRect" parent="VBoxContainer/HBoxContainer2/Icon"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
texture = ExtResource( 2 )

[node name="Character" type="TextureRect" parent="VBoxContainer/HBoxContainer2/Icon"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Infos" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 82.0
margin_right = 162.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="Health_Bar" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/Infos"]
margin_right = 80.0
margin_bottom = 78.0
size_flags_vertical = 3

[node name="Life" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/Infos/Health_Bar"]
margin_right = 80.0
margin_bottom = 14.0

[node name="Text" type="Label" parent="VBoxContainer/HBoxContainer2/Infos/Health_Bar/Life"]
margin_right = 27.0
margin_bottom = 14.0
text = "Life:"

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer2/Infos/Health_Bar/Life"]
margin_left = 31.0
margin_right = 47.0
margin_bottom = 14.0
text = "50"

[node name="Max" type="Label" parent="VBoxContainer/HBoxContainer2/Infos/Health_Bar/Life"]
margin_left = 51.0
margin_right = 80.0
margin_bottom = 14.0
text = "/100"

[node name="Life_Bar" type="ProgressBar" parent="VBoxContainer/HBoxContainer2/Infos/Health_Bar"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0
value = 50.0
allow_greater = true
